# kdct

./: .gitignore  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  about.hbs  about.toml  client.toml  server.toml
.github/workflows/: release.yml
apps/kdct-panel/: Cargo.toml  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/kdct-panel/src/: app.css  app.html  editor.rs  main.rs
apps/kdct-panel/src/lib/: BridgeDetail.svelte  LoadImageModal.svelte  api.ts  types.ts
apps/kdct-panel/src/routes/: +layout.svelte  +page.svelte
apps/kdct-panel/src/routes/images/: +page.svelte
apps/kdct-panel/src/routes/nodes/: +page.svelte
crates/kdct-client/: Cargo.toml
crates/kdct-client/src/: main.rs
crates/kdct-server/: Cargo.toml
crates/kdct-server/src/: admin.rs  api.rs  db.rs  deploy.rs  deployment_tracker.rs  image.rs  interactive.rs  main.rs  node.rs  proxy.rs  web.rs
crates/kdctc/src/: docker.rs
crates/kdcts/: Cargo.toml  build.rs
crates/kdcts/src/: acme.rs  api.rs  db.rs  deploy.rs  deployment_tracker.rs  image.rs  main.rs  proxy.rs  setup.html
crates/rathole/: Cargo.toml
crates/rathole/src/: client.rs  config.rs  lib.rs  node_update.rs  pipeline.rs  port_pool.rs  protocol.rs  registry.rs  server.rs
crates/rathole/src/transport/: mod.rs
crates/tunnel/: Cargo.toml
crates/tunnel/src/: cli.rs  client.rs  config.rs  helper.rs  lib.rs  node_update.rs  port_pool.rs  protocol.rs  registry.rs  server.rs
tests/: client.toml  pipeline.json  server.toml
