[workspace]
resolver = "2"
members = [
    "crates/rathole",
    "crates/kdct-server",
    "crates/kdct-client",
    "apps/kdct-panel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.bench]
debug = 1

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
