[package]
name = "kdct-panel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rathole = { path = "../../crates/rathole", features = ["client"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.19"
muda = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
dirs = "5"
