[package]
name = "kdct-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rathole = { path = "../rathole", features = ["server"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
