[package]
name = "kdcts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rathole = { path = "../rathole", features = ["server"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
pingora = { version = "0.8", default-features = false, features = ["proxy", "rustls"] }
dialoguer = "0.11"
async-trait = "0.1"
fdlimit = "0.2"
