[package]
name = "kdcts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tunnel = { path = "../tunnel", features = ["server"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.39", features = ["bundled"] }
pingora = { version = "0.8", default-features = false, features = ["proxy", "rustls"] }
async-trait = "0.1"
fdlimit = "0.3"
hex = "0.4"
tiny_http = "0.12"
base64 = "0.22"
ureq = "2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
uuid = { version = "1", features = ["v4"] }
instant-acme = { version = "0.8", features = ["rcgen"] }
x509-parser = "0.18"
